<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VaultBin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#191919"
        android:padding="15dp">

        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_arrow_back_24"
            android:backgroundTint="#00FFFFFF"
            app:tint="@color/white"
            android:layout_margin="3dp"
            android:contentDescription="@string/back_arrow"
            android:id="@+id/btnBack"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="match_parent"
            android:text="@string/bin"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:paddingStart="5dp"
            tools:ignore="RtlSymmetry"
            android:gravity="center_vertical"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/you"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/circle_background"
            android:layout_margin="3dp"
            android:id="@+id/tvUserName"
            />
        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/more_vert_24px"
            android:backgroundTint="#00FFFFFF"
            app:tint="@color/white"
            android:layout_margin="3dp"
            android:contentDescription="@string/more" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="#2C2C2C">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:text="@string/there_are_no_items_in_the_bin"
            android:gravity="center"
            android:id="@+id/tvNoItems"
            />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lvDeletedList"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#191919"
        android:padding="5dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/lock_24px"
                app:tint="#03A9F4"
                android:contentDescription="@string/lock" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_vault"
                android:textColor="#03A9F4"
                android:textSize="20sp"
                android:gravity="center"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/send_24px"
                app:tint="@color/white"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/autorenew_24px"
                app:tint="@color/white"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/generator"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:gravity="center"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/settings_24px"
                app:tint="@color/white"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>