<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFrag"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="26sp"
        android:gravity="center"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/etSignUpUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_username"
                android:textColorHint="@color/hint_color"
                android:inputType="text"
                android:background="@drawable/edit_text_border"
                android:autofillHints="UserName" />
        </LinearLayout>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border">

            <EditText
                android:id="@+id/etSignUpPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/btnTogglePassword"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:layout_centerVertical="true"
                android:textColorHint="@color/hint_color"
                android:autofillHints="Password" />

            <ImageButton
                android:id="@+id/btnTogglePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/visibility_off_24px"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/password_hide"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                app:tint="@color/hint_color" />
        </RelativeLayout>
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:id="@+id/rlConfirm">

            <EditText
                android:id="@+id/etSConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/btnToggleConfirmPassword"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:layout_centerVertical="true"
                android:textColorHint="@color/hint_color"
                android:autofillHints="Confirm Password" />

            <ImageButton
                android:id="@+id/btnToggleConfirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/visibility_off_24px"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/password_hide"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                app:tint="@color/hint_color"/>
        </RelativeLayout>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/passwordMismatchError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passwords_mismatch"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"
        android:layout_marginStart="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#C80F0F"
            android:text="@string/exit" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/blue"
            android:text="@string/sign_up" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btnSLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:padding="0dp"
            android:text="@string/login"
            android:textColor="@color/blue"/>
    </LinearLayout>

</LinearLayout>