<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFrag"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hey, welcome back!"
        android:textSize="26sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Enter Your Credentials To Login"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginBottom="15dp"
        android:textColor="@color/white"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/etLoginUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/username"
                android:textColorHint="@color/hint_color"
                android:inputType="text"
                android:background="@drawable/edit_text_border"
                android:autofillHints="UserName" />
        </LinearLayout>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border">

            <EditText
                android:id="@+id/etLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/btnToggleLoginPassword"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_centerVertical="true"
                android:textColorHint="@color/hint_color"
                android:autofillHints="Password" />

            <ImageButton
                android:id="@+id/btnToggleLoginPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/visibility_off_24px"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/password_hide"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                app:tint="@color/hint_color" />
        </RelativeLayout>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#C80F0F"
            android:text="Exit" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/blue"
            android:text="Login" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="No Account Yet?"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/btnLSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:text="Create One"
            android:textColor="@color/blue"
            android:padding="0dp"/>
    </LinearLayout>

</LinearLayout>